syntax = "proto3";

package udfs.proto;

message EmptyMessage {}

message DataNodeInfo {
    string address = 1;
    uint64 available = 2;
    uint64 used = 3;
}

message Block {
    uint64 id = 1;
    uint64 len = 2;
}

